--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,8 @@
 services:
     dev.validateschema:
         class: steevanb\DevBundle\Service\ValidateSchemaService
-        arguments: [ @doctrine ]
+        arguments: [ @doctrine, @dev.session_cache ]
+
+    dev.session_cache:
+        class: steevanb\DevBundle\Cache\SessionCache
+        arguments: [ @session, @kernel ]
