--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,8 +1,8 @@
 services:
     dev.validateschema:
         class: steevanb\DevBundle\Service\ValidateSchemaService
-        arguments: [ @doctrine, @dev.session_cache ]
+        arguments: [ '@doctrine', '@dev.session_cache' ]
 
     dev.session_cache:
         class: steevanb\DevBundle\Cache\SessionCache
-        arguments: [ @session, @kernel ]
+        arguments: [ '@session', '@kernel' ]
