Refactor from beginning Translation not found

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,5 +1,5 @@
 services:
-    dev.validateschema:
+    dev.validate_schema:
         class: steevanb\DevBundle\Service\ValidateSchemaService
         arguments: [ '@doctrine', '@dev.session_cache' ]
 
