--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "psr-4": { "steevanb\\DevBundle\\": "" }
     },
     "require": {
-      "symfony/symfony": "^2.6|^3.0|^4.0"
+      "symfony/framework-bundle": "^2.6|^3.0|^4.0"
     },
     "repositories": [
         {
